# mem-forensics-mcp-server

./: .gitignore  README.md  opencode.json  pyproject.toml
mem_forensics_mcp_server/: __init__.py  __main__.py  config.py  server.py
mem_forensics_mcp_server/core/: __init__.py  cache.py  session.py  vol3_cli.py
mem_forensics_mcp_server/engine/: __init__.py  memoxide_client.py
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/: Cargo.toml
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/: main.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/analyzers/: command_analyzer.rs  full_triage.rs  mod.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/memory/: error.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/memory/layers/: mmap_file.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/memory/scanners/: simd_scanner.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/memory/translators/: intel64.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/plugins/: cmdline.rs  cmdscan.rs  dlllist.rs  malfind.rs  netscan.rs  pslist.rs  psscan.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/rules/: command_patterns.rs
mem_forensics_mcp_server/engine/memoxide-src/crates/memoxide/src/server/: tools.rs
tests/: __init__.py
